Fix forecast icons and elements alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,7 @@ footer{
     height: 30px;
     display: inline-block;
     margin-left: 45px;
-    margin-top: 30px;
+    margin-top: 35px;
 }
 
 .weather-clothes-icon-hp {
@@ -418,12 +418,18 @@ footer{
 .supporting-weather-icon-img {
     width: 20px;
     margin-left: 5px;
+    margin-top: -7px;
 }
 
 .forecast-text {
-    margin-top: 30px;
+    margin-top: 28px;
     font-size: 14px;
     margin-left: 15px;
+}
+
+.arrow-icon {
+    margin-right: -3px;
+    margin-bottom: -2px;
 }
 
 /* Berlin */
